# TTS_OFFLINE

./: .gitignore  README.md  builder.py  cli.py  cli_addon.py  library_words.json  pyproject.toml  settings.json  start.py
app/: __init__.py  _protocol.py  main.py  routers.py  schemas.py
app/text_normalizers/: __init__.py  library_words_manager.py  main.py
app/text_normalizers/eng/: eng.py  extends.py  main.py  tests.py
app/text_normalizers/ru/: extends.py  main.py  ru.py  test_extends.py  tests.py
app/tts/: __init__.py  audio_output.py  tts.py  tts_engine_protocol.py
app/tts/piper/: model_info.py  ttscore.py
app/tts/piper_engine/: __init__.py  model_info.py  ttscore.py
app/tts/silero/: model_info.py  ttscore.py
app/tts/silero_engine/: __init__.py  model_info.py  ttscore.py
app/tts/text_normalizers/: get_curren_date_ru.py  library_words_manager.py  main.py  ru.py
config/: moduls.py  schemas.py
server/: __init__.py  _app.py  _server.py  settings.json
utils/: settings_manager.py
utils/message_bus_manager/: message_bus_manager.py
